force-app/main/default/objects/Fact_RetailReceiving__x/Fact_RetailReceiving__x.object-meta.xml
<CustomObject>
    <externalDataSource>dgw_united_termite</externalDataSource>
    <externalName>Fact_RetailReceiving</externalName>
    <label>Fact_RetailReceiving</label>
    <pluralLabel>Fact_RetailReceiving</pluralLabel>
</CustomObject>