force-app/main/default/objects/Fact_RetailReceiving__x/fields/CostAmt__c.field-meta.xml
<CustomField>
    <fullName>CostAmt__c</fullName>
    <description>CostAmt</description>
    <externalDeveloperName>CostAmt</externalDeveloperName>
    <label>CostAmt</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>