force-app/main/default/objects/Fact_RetailReceiving__x/fields/DocumentDescription__c.field-meta.xml
<CustomField>
    <fullName>DocumentDescription__c</fullName>
    <description>DocumentDescription</description>
    <externalDeveloperName>DocumentDescription</externalDeveloperName>
    <label>DocumentDescription</label>
    <length>15</length>
    <type>Text</type>
</CustomField>