force-app/main/default/objects/Fact_RetailReceiving__x/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>DocumentType</description>
    <externalDeveloperName>DocumentType</externalDeveloperName>
    <label>DocumentType</label>
    <length>32</length>
    <type>Text</type>
</CustomField>