force-app/main/default/objects/Fact_RetailReceiving__x/fields/ExtCost__c.field-meta.xml
<CustomField>
    <fullName>ExtCost__c</fullName>
    <description>ExtCost</description>
    <externalDeveloperName>ExtCost</externalDeveloperName>
    <label>ExtCost</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>