force-app/main/default/objects/Fact_RetailReceiving__x/fields/InventoryTypeID__c.field-meta.xml
<CustomField>
    <fullName>InventoryTypeID__c</fullName>
    <description>InventoryTypeID</description>
    <externalDeveloperName>InventoryTypeID</externalDeveloperName>
    <label>InventoryTypeID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>