force-app/main/default/objects/Fact_RetailReceiving__x/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location</description>
    <externalDeveloperName>Location</externalDeveloperName>
    <label>Location</label>
    <length>254</length>
    <type>Text</type>
</CustomField>