force-app/main/default/objects/Fact_RetailReceiving__x/fields/MiscCharge__c.field-meta.xml
<CustomField>
    <fullName>MiscCharge__c</fullName>
    <description>MiscCharge</description>
    <externalDeveloperName>MiscCharge</externalDeveloperName>
    <label>MiscCharge</label>
    <length>50</length>
    <type>Text</type>
</CustomField>