force-app/main/default/objects/Fact_RetailReceiving__x/fields/MonthEndDate__c.field-meta.xml
<CustomField>
    <fullName>MonthEndDate__c</fullName>
    <description>MonthEndDate</description>
    <externalDeveloperName>MonthEndDate</externalDeveloperName>
    <label>MonthEndDate</label>
    <type>DateTime</type>
</CustomField>