force-app/main/default/objects/Fact_RetailReceiving__x/fields/ProductStyleID__c.field-meta.xml
<CustomField>
    <fullName>ProductStyleID__c</fullName>
    <description>ProductStyleID</description>
    <externalDeveloperName>ProductStyleID</externalDeveloperName>
    <label>ProductStyleID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>