force-app/main/default/objects/Fact_RetailReceiving__x/fields/ReferenceDate__c.field-meta.xml
<CustomField>
    <fullName>ReferenceDate__c</fullName>
    <description>ReferenceDate</description>
    <externalDeveloperName>ReferenceDate</externalDeveloperName>
    <label>ReferenceDate</label>
    <type>DateTime</type>
</CustomField>