force-app/main/default/objects/Fact_RetailReceiving__x/fields/ReferenceNum__c.field-meta.xml
<CustomField>
    <fullName>ReferenceNum__c</fullName>
    <description>ReferenceNum</description>
    <externalDeveloperName>ReferenceNum</externalDeveloperName>
    <label>ReferenceNum</label>
    <length>60</length>
    <type>Text</type>
</CustomField>