force-app/main/default/objects/Fact_RetailReceiving__x/fields/StatusId__c.field-meta.xml
<CustomField>
    <fullName>StatusId__c</fullName>
    <description>StatusId</description>
    <externalDeveloperName>StatusId</externalDeveloperName>
    <label>StatusId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>