force-app/main/default/objects/Fact_RetailReceiving__x/fields/StoreNum__c.field-meta.xml
<CustomField>
    <fullName>StoreNum__c</fullName>
    <description>StoreNum</description>
    <externalDeveloperName>StoreNum</externalDeveloperName>
    <label>StoreNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>