force-app/main/default/objects/Fact_RetailReceiving__x/fields/StoreNumBrand_key__c.field-meta.xml
<CustomField>
    <fullName>StoreNumBrand_key__c</fullName>
    <description>StoreNumBrand_key</description>
    <externalDeveloperName>StoreNumBrand_key</externalDeveloperName>
    <label>StoreNumBrand_key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>