force-app/main/default/objects/Fact_RetailReceiving__x/fields/TranSeq__c.field-meta.xml
<CustomField>
    <fullName>TranSeq__c</fullName>
    <description>TranSeq</description>
    <externalDeveloperName>TranSeq</externalDeveloperName>
    <label>TranSeq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>