force-app/main/default/objects/Fact_RetailReceiving__x/fields/WkstnID__c.field-meta.xml
<CustomField>
    <fullName>WkstnID__c</fullName>
    <description>WkstnID</description>
    <externalDeveloperName>WkstnID</externalDeveloperName>
    <label>WkstnID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>